feat(db): add initial schema migration with users and jobs tables

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ DB_PASSWORD=converter123
 DB_NAME=converter
 DB_HOST=localhost
 DB_PORT=5432
+
+# Connection string (used by migrations and app)
+DATABASE_URL=postgres://converter:converter123@localhost:5432/converter
